# jax-neural-odes

./: pyproject.toml
assignment_1/: handling_nan.ipynb  intro.ipynb  showcase.ipynb  the_sharp_bits.ipynb
assignment_2/: diffrax_maxim.ipynb  neural_ode_diffrax.ipynb  neural_ode_jax.ipynb
assignment_3/: covid.ipynb  covid_fit.npy  lh_data.ipynb  lh_predictions.npy
assignment_4/: gru-ode-spiral.ipynb  main.ipynb  non-ode-working.py
