[project]
name = "jax-neural-odes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "diffrax>=0.7.0",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "jax>=0.8.0",
    "matplotlib>=3.10.7",
    "optax>=0.2.6",
    "tqdm>=4.67.1",
]
